fix: add missing z-index

--- a/src/components/rating-card/RatingCard.scss
+++ b/src/components/rating-card/RatingCard.scss
@@ -12,6 +12,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 10;
 }
 
 .rating-card__img {
